--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
   --gris: #f5f3f3;
   --blanco: #ffffff;
   --negro: #000000;
+  --azul: #0f11dd;
 }
 
 html {
@@ -24,13 +25,15 @@ body {
   line-height: 2;
 }
 
-.contenedor {  
-  width: min(90%, 120rem);
-  margin: 0 auto;
-}
+
+
 /*GLOBALES*/
 a {
   text-decoration: none;
+}
+
+a:hover {
+  color: var(--blanco);
 }
 
 h1,
@@ -57,105 +60,145 @@ h4 {
   font-size: 2.8rem;
 }
 
-img {
-    max-width:100%;
+img,
+iframe {
+  max-width: 100%;
 }
+
 
 /**UTILIDADES**/
 .no-margin {
-    margin: 0;
+  margin: 0;
 }
 
 .no-padding {
-    padding: 0;
+  padding: 0;
 }
 
 .centrar-texto {
-    text-align: center;
+  text-align: center;
 }
 
 /**HEADER**/
 .webp .header {
-background-image: url(../img/banner.webp);
+  background-image: url(../img/banner.webp);
 }
+
 .no.webp .header {
   background-image: url(../img/banner.jpg);
 }
-.header {  
-    height: 60rem;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
+
+.header {
+  height: 60rem;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
 
 }
 
 .header__texto {
-    color: var(--blanco);
-    text-align: center;
-    margin-top: 5rem;
+  color: var(--blanco);
+  text-align: center;
+  margin-top: 5rem;
 }
-@media (min-width: 768px) {
-    .header__texto {
-        margin-top: 15rem;
-    }
-} 
 
 @media (min-width: 768px) {
-    .barra {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        
-    }
-    
-} 
+  .header__texto {
+    margin-top: 15rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .barra {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+  }
+
+}
+
 .barra {
   padding-top: 4rem;
 }
 
 .logo {
-    color: var(--blanco); 
+  color: var(--blanco);
 }
+
 .logo__nombre {
-   font-weight: 400; 
+  font-weight: 400;
 }
 
 .logo__blod {
-    font-weight: 700;
+  font-weight: 700;
 }
 
+.navegacion {
+  padding-inline: 20rem;
+}
 @media (min-width: 768px) {
-    .navegacion {
-      display: flex;
-      gap: 2rem;
-    }
-} 
+  .navegacion {
+    display: flex;
+    gap: 2rem;
+  padding-inline: 0rem;
+  }
+}
 
 .navegacion__enlaces {
-    display: block;
-    text-align: center;
-    font-size: 1.8rem;
-    color: var(--blanco);
+  text-align: center;
+  font-size: 1.8rem;
+  color: var(--blanco);
+  display: block;
+  position: relative;
+}
+
+.navegacion__enlaces:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: .3rem;
+  bottom: 0;
+  left: 0;
+  background-color: var(--azul);
+  transform: scale(0);
+  transform-origin: bottom right;
+  transition: transform 1s ease-out;
+}
+
+.navegacion__enlaces:hover:after {
+  transform: scalex(.9);
+  transform-origin: bottom left;
+  transition: transform .3s ease-out;
 }
 
 
-
 @media (min-width: 768px) {
-    .contenido-principal {
-      display: grid;
-      grid-template-columns: 2fr 1fr;
-      column-gap: 4rem;
-    }
-} 
- 
+  .contenido-principal {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    column-gap: 4rem;
+  }
+}
+
+
 .entrada {
-  border-bottom: 1px solid var(--gris) ;
+  border-bottom: 1px solid var(--gris);
   margin-bottom: 2rem;
 }
 
 .entrada:last-of-type {
   border: none;
   margin-bottom: 0;
+}
+
+.sidebar h3,
+.blog h3 {
+  margin-block: 3.5rem;
+  font-weight: bold;
+  font-size: 4rem;
+
+
 }
 
 .boton {
@@ -170,26 +213,30 @@ background-image: url(../img/banner.webp);
   margin-bottom: 2rem;
   border: none;
 }
+
 @media (min-width: 768px) {
- .boton {
-   display: inline-block;
- }
-    
-} 
-.boton:hover {
-  cursor: pointer;
+  .boton {
+    display: inline-block;
+  }
 }
+
+
+
 .boton--primario {
   background-color: var(--negro);
 }
 
 .boton--secundario {
   background-color: var(--primario);
+  box-shadow: 5px 5px #39322f;
 }
+
+
 
 .cursos {
   list-style: none;
 }
+
 .widget--curso {
   border-bottom: 1px solid var(--primario);
 
@@ -199,38 +246,40 @@ background-image: url(../img/banner.webp);
   border: none;
   margin-bottom: 0;
 }
+
 .widget--curso__label {
-font-family: var(--fuenTeHeading);
-font-family: bold;
+  font-family: var(--fuenTeHeading);
+  font-family: bold;
 }
 
 .widget--curso__info {
-font-weight: normal;
+  font-weight: normal;
 }
 
 .widget--curso__label,
 .widget--curso__info {
   font-size: 2rem;
 }
+
 .footer {
-    background-color: var(--negro);
-    padding-bottom: 3rem;
-    margin-top: 4rem;
-    
+  background-color: var(--negro);
+  padding-bottom: 3rem;
+  margin-top: 4rem;
+
 }
 
 /**************NOSTROS**************/
 @media (min-width: 768px) {
-   .sobre-nosotros {
-     display: flex;
-     justify-content: space-between;
-   }
+  .sobre-nosotros {
+    display: flex;
+    justify-content: space-between;
+  }
 
-   .sobre-nosotros__img,
-   .sobre-nosotros__texto {
-     flex-basis: calc(50% - 1rem);
-   } 
-} 
+  .sobre-nosotros__img,
+  .sobre-nosotros__texto {
+    flex-basis: calc(50% - 1rem);
+  }
+}
 
 /*********************CURSO*********************/
 
@@ -240,12 +289,13 @@ font-weight: normal;
 }
 
 @media (min-width: 768px) {
-    .curso {
-      display: grid;
-      grid-template-columns: 1fr 2fr;
+  .curso {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
     column-gap: 2rem;
-    }
-} 
+  }
+}
+
 .curso:last-of-type {
   border: none;
 }
@@ -253,30 +303,30 @@ font-weight: normal;
 .curso__label {
   font-family: var(--fuenTeHeading);
   font-family: bold;
-  }
-  
-  .curso__info {
+}
+
+.curso__info {
   font-weight: normal;
-  }
-  
-  .curso__label,
-  .curso__info {
-    font-size: 2rem;
-  }
+}
+
+.curso__label,
+.curso__info {
+  font-size: 2rem;
+}
 
 /***************CONTACTO*********************/
-.rigth{
-background-color: rgb(6, 185, 0);
-text-align: center;
-padding: 1rem;
-color: var(--blanco);
+.rigth {
+  background-color: rgb(6, 185, 0);
+  text-align: center;
+  padding: 1rem;
+  color: var(--blanco);
 }
 
 .error {
-background-color: rgb(185, 0, 0);
-text-align: center;
-padding: 1rem;
-color: var(--blanco);
+  background-color: rgb(185, 0, 0);
+  text-align: center;
+  padding: 1rem;
+  color: var(--blanco);
 }
 
 .contacto-bg {
@@ -287,27 +337,27 @@ color: var(--blanco);
 }
 
 .formulario {
-background-color: var(--blanco);
-margin: -5rem auto;
-width: 95%;
-padding: 5rem;
+  background-color: var(--blanco);
+  margin: -5rem auto;
+  width: 95%;
+  padding: 5rem;
 }
 
 .campo {
-display: flex;
-margin-bottom: 2rem;
+  display: flex;
+  margin-bottom: 2rem;
 
 }
 
 .campo__label {
-flex: 0 0 9rem;
-text-align: right;
-padding-right: 2rem;
+  flex: 0 0 9rem;
+  text-align: right;
+  padding-right: 2rem;
 }
 
 .campo__field {
-flex: 1;
-border: 1px solid var(--gris);
+  flex: 1;
+  border: 1px solid var(--gris);
 }
 
 .campo__field--textarea {
